--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,12 @@
  *
  * It is extraordinarily rare that you will ever need to edit this file.
  */
-
+//
 buildscript {
+//    ext {
+////        kotlin_version = '1.0.0'
+//    }
+
 
 //    ext.kotlin_version = '1.8.20'
 
@@ -15,6 +19,7 @@ buildscript {
     dependencies {
         // Note for FTC Teams: Do not modify this yourself.
         classpath 'com.android.tools.build:gradle:7.2.0'
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 //        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
